# langchain-tutorial

./: .gitignore  README.md  pyproject.toml
components/: 01 - chat.ipynb  02 - prompts.ipynb  03 - indexes.ipynb  04 - chains.ipynb  05 - memory.ipynb  06 - agents.ipynb
data/: sample_loader.txt
