[tool.poetry]
name = "langchain-tutorial"
version = "0.1.0"
description = ""
authors = ["Yaniv Ben Zvi <yaniv.ben.zvi@retrain.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
langchain = "^0.2.6"
langchain-community = "^0.2.5"
ollama = "^0.2.1"
openai = "^1.35.10"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.14"
faiss-cpu = "^1.8.0.post1"
google-search-results = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
